--- a/src/main/resources/templates/login.html
+++ b/src/main/resources/templates/login.html
@@ -8,7 +8,7 @@
 
 <th:block layout:fragment="content">
     <div class="col-md-8 offset-md-2 my-5 py-4 px-5" style="background: #fff; border-radius: 8px; border: 1px solid #eee;">
-        <div class="row mb-3">
+        <div class="row mb-4 my-3">
             <span class="navbar-brand" style="margin: 0 auto;">
                 <div style="width:72px; height:72px; display: inline-block; vertical-align: middle;">
                     <i class="iconfont icon-wuli" style="font-size: 72px; line-height: 70px;"></i>
@@ -42,7 +42,7 @@
                 <label for="email">邮箱：</label>
                 <input id="email" name="username"  maxlength="50"  type="email" class="form-control" placeholder="请输入邮箱"  required  >
             </div>
-            <div class="form-group">
+            <div class="form-group mb-2">
                 <label for="password">密码：</label>
                 <input id="password" name="password" maxlength="30" type="password" class="form-control"  placeholder="请输入密码" required>
             </div>
@@ -51,9 +51,9 @@
                 <label class="form-check-label" for="remember-me">记住我</label>
             </div>
             <button class="btn mt-2 btn-primary btn-block" type="submit">登录</button>
-            <div class="my-3 ml-auto text-muted">
-                <p style="text-align: left;float: left">没有帐号？<a href="/register">立即注册</a></p>
-                <p style="text-align: right;float: right" ><a href="/reset">忘记密码</a></p>
+            <div class="my-2 ml-auto mb-4 mr-auto text-muted clearfix row">
+                <div class="mr-auto">没有帐号？<a href="/register">立即注册</a></div>
+                <div><a href="/reset">忘记密码</a></div>
             </div>
 
         </form>
