--- a/src/main/resources/templates/base.html
+++ b/src/main/resources/templates/base.html
@@ -165,7 +165,28 @@
             }, 1000);
         };
     </script>
+    <script>
+        $(document).ready(function(){
+            $("#passwordButton").click(function(){
+                $("#messageDiv").hide();
+                $("#passwordDiv").show();
+            });
 
+            $("#messageButton").click(function(){
+                $("#messageDiv").show();
+                $("#passwordDiv").hide();
+            });
+        });
+        function check(input) {
+            if (input.value != document.getElementById('newPassword1').value) {
+                input.setCustomValidity('两次输入的密码必须一致');
+            } else {
+                // input is valid -- reset the error message
+                input.setCustomValidity('');
+            }
+        }
+
+    </script>
 
     <th:block layout:fragment="scripts">
         <!-- More Scripts -->
