:questionAll/head+utf-8 :scoll->scroll

--- a/src/main/resources/templates/questionAll.html
+++ b/src/main/resources/templates/questionAll.html
@@ -2,6 +2,7 @@
 <html xmlns:th="http://www.thymeleaf.org" xmlns:layout="http://www.w3.org/1999/xhtml" layout:decorator="base">
 <head>
     <title>题库页面</title>
+    <meta charset="utf-8" />
 </head>
 
 <th:block layout:fragment="links">
@@ -16,7 +17,7 @@
             <i class="far fa-list-alt" style="font-size:90%"></i>
             题目列表
         </h5>
-        <table class="ui selectable compact celled stripped table" style="margin-top: 4px; width:100%; overflow-y:scoll; ">
+        <table class="ui selectable compact celled stripped table" style="margin-top: 4px; width:100%; overflow-y:scroll; ">
             <thead>
             <tr>
                 <th class="center aligned">编号</th>
