--- a/src/main/resources/templates/questionDetail.html
+++ b/src/main/resources/templates/questionDetail.html
@@ -6,7 +6,7 @@
     <title>题目</title>
 </head>
 
-<th:block>
+<th:block layout:fragment="content">
     <div class="container-fluid">
         <div class="row">
             <div class="col-md-8">
