modify questionDetail.html file to make it look better

--- a/src/main/resources/templates/questionDetail.html
+++ b/src/main/resources/templates/questionDetail.html
@@ -8,27 +8,29 @@
 
 <th:block layout:fragment="content">
     <div class="container-fluid">
-        <div class="row">
+        <div class="row"
+             style="border-radius: 10px; margin: 2% 10%;">
             <div class="col-md-8">
-                <h2>
-                    题目
-                </h2>
+                <h5>
+                    脑筋急转弯-题二十三-跳水问题
+                </h5>
                 <p>
-                    题目内容
-                </p>
-                <div class="btn-group btn-group-md" role="group">
+                    胖胖是个京都有名的跳水运动员，他身高一米八三，体重六十九公斤，曾两度夺得世青赛桂冠。可是有一天，他站在跳台上，却不敢往下跳。这是为什么?
+                    （已知跳台高十米，重力加速度g=9.8m/s^2。他的女友名叫小芳。）
+               </p>
+                <div class="btn-group btn-group-vertical btn-group-md" role="group">
 
                     <button class="btn btn-block btn-link" type="button">
-                        A
+                        A : 他的女友抛弃了他。
                     </button>
                     <button class="btn btn-block btn-link" type="button">
-                        B
+                        B : 水池中没有水。
                     </button>
                     <button class="btn btn-block btn-link" type="button">
-                        C
+                        C : 根据公式计算，当他下落至水平线时，他的速度会超过10m/s。这超出了他身体的承受范围。
                     </button>
                     <button class="btn btn-block btn-link" type="button">
-                        D
+                        D : 他老了，忘记了如何跳水。
                     </button>
                 </div>
                 <button type="button" class="btn btn-block btn-secondary btn-sm">
@@ -56,7 +58,7 @@
                         </div>
                         <div class="tab-pane" id="tab2">
                             <p>
-                                这里是答案。
+                                【选B】因为水池里没有水
                             </p>
                         </div>
                     </div>
