--- a/src/main/resources/templates/questionDetail.html
+++ b/src/main/resources/templates/questionDetail.html
@@ -7,64 +7,12 @@
 </head>
 
 <th:block layout:fragment="content">
-    <div class="container-fluid">
-        <div class="row"
-             style="border-radius: 10px; margin: 2% 10%;">
-            <div class="col-md-8">
-                <h5>
-                    脑筋急转弯-题二十三-跳水问题
-                </h5>
-                <p>
-                    胖胖是个京都有名的跳水运动员，他身高一米八三，体重六十九公斤，曾两度夺得世青赛桂冠。可是有一天，他站在跳台上，却不敢往下跳。这是为什么?
-                    （已知跳台高十米，重力加速度g=9.8m/s^2。他的女友名叫小芳。）
-               </p>
-                <div class="btn-group btn-group-vertical btn-group-md" role="group">
-
-                    <button class="btn btn-block btn-link" type="button">
-                        A : 他的女友抛弃了他。
-                    </button>
-                    <button class="btn btn-block btn-link" type="button">
-                        B : 水池中没有水。
-                    </button>
-                    <button class="btn btn-block btn-link" type="button">
-                        C : 根据公式计算，当他下落至水平线时，他的速度会超过10m/s。这超出了他身体的承受范围。
-                    </button>
-                    <button class="btn btn-block btn-link" type="button">
-                        D : 他老了，忘记了如何跳水。
-                    </button>
-                </div>
-                <button type="button" class="btn btn-block btn-secondary btn-sm">
-                    前一题
-                </button>
-                <button type="button" class="btn btn-block btn-primary btn-sm">
-                    后一题
-                </button>
-            </div>
-            <div class="col-md-4">
-                <div class="tabbable" id="tabs-20458">
-                    <ul class="nav nav-tabs">
-                        <li class="nav-item">
-                            <a class="nav-link active show" href="#tab1" data-toggle="tab">评论</a>
-                        </li>
-                        <li class="nav-item">
-                            <a class="nav-link" href="#tab2" data-toggle="tab">答案</a>
-                        </li>
-                    </ul>
-                    <div class="tab-content">
-                        <div class="tab-pane active" id="tab1">
-                            <p>
-                                这里是评论。
-                            </p>
-                        </div>
-                        <div class="tab-pane" id="tab2">
-                            <p>
-                                【选B】因为水池里没有水
-                            </p>
-                        </div>
-                    </div>
-                </div>
-            </div>
-        </div>
+    <div class="card" style="background: #fff; border-radius: 10px; flex: 1; width: 80%;margin-left: auto;margin-right: auto;margin-top: auto">
+        <h5 class="text-center" style="margin-top: auto">
+            <i class="far fa-list-alt" style="font-size:90%"></i>
+            <span th:text="'第'+${question.id}+'题'"></span>
+        </h5>
+        <>
     </div>
 </th:block>
 
