--- a/src/main/resources/templates/questionDetail.html
+++ b/src/main/resources/templates/questionDetail.html
@@ -4,13 +4,13 @@
 <head>
     <meta charset="UTF-8">
     <title>题目</title>
+    <link href="../static/css/phyweb.css" rel="stylesheet" th:href="@{/css/phyweb.css}">
 </head>
 
 <th:block layout:fragment="links">
     <!-- fomantic-ui table -->
     <link href="https://cdn.jsdelivr.net/npm/fomantic-ui@2.7.4/dist/components/table.min.css" rel="stylesheet">
     <link href="https://cdn.jsdelivr.net/npm/fomantic-ui@2.7.4/dist/components/button.min.css" rel="stylesheet">
-    <link th:href="@{/css/phyweb.css}"  rel="stylesheet" >
 </th:block>
 
 <th:block layout:fragment="content">
@@ -109,12 +109,8 @@
 
     </div>
 
-    <th:block layout:fragment="scripts">
-        <!-- More Scripts -->
-        <script src="./js/global.js" th:src="@{/js/global.js}"></script>
-    </th:block>
-
 
 </th:block>
+<script src="./js/global.js" th:src="@{/js/global.js}"></script>
 
 </html>
