填空题、简答题做题页面完成

--- a/src/main/resources/static/css/phyweb.css
+++ b/src/main/resources/static/css/phyweb.css
@@ -50,7 +50,7 @@ body {
     color: #fff;
     border-radius: 0;
     position: relative;
-    background: linear-gradient(rgba(0,0,0,.6),rgba(0,0,0,.6)), url('https://ws1.sinaimg.cn/large/0070O95Yly1g2ak4bo2fdj31hc0jvdu9.jpg');
+    background: linear-gradient(rgba(0,0,0,.6),rgba(0,0,0,.6)), url('https://i.loli.net/2019/06/03/5cf401f0a996465605.jpg');
     background-size: cover;
     display:flex;
     align-items:center;
