--- a/src/main/resources/templates/questionAll.html
+++ b/src/main/resources/templates/questionAll.html
@@ -12,7 +12,7 @@
 </th:block>
 
 <th:block layout:fragment="content">
-    <div class="card mt-3 p-3 shadow-sm" style="background: #fff; border-radius: 10px; flex: 1; width: 80%;margin-left: auto;margin-right: auto">
+    <div class="card my-4 p-3 shadow-sm" style="background: #fff; border-radius: 10px; flex: 1; width: 80%;margin-left: auto;margin-right: auto">
         <h5 class="text-center">
             <i class="far fa-list-alt" style="font-size:90%"></i>
             题目列表
